--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,6 @@
 		<java.version>1.8</java.version>
 		<failOnMissingWebXml>false</failOnMissingWebXml><!-- 不使用web.xml时使用 -->
 	</properties>
-
-	
 	
 	<dependencies>
 		<dependency>
@@ -55,6 +53,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
+		<!-- mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
