--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,14 @@ mapper.mappers=com.common.MyMapper
 
 # REDIS (RedisProperties)
 #spring.redis.database=0
-#spring.redis.host=127.0.0.1
+#spring.redis.host=192.168.0.198
 #spring.redis.port=6379
-#spring.redis.password=
-#spring.redis.pool.max-active=8
-#spring.redis.pool.max-wait=-1
-#spring.redis.pool.max-idle=8
-#spring.redis.pool.min-idle=0
-#spring.redis.timeout=0
+#spring.redis.password=123456
+#spring.redis.jedis.pool.max-active=10
+#spring.redis.jedis.pool.max-wait = -1
+#spring.redis.jedis.pool.max-idle=8
+#spring.redis.jedis.pool.min-idle=1
+#spring.redis.timeout=3000
 
 #REDIS集群
 #spring.redis.sentinel.master=mymaster
@@ -67,8 +67,8 @@ http.token = 2
 #记录同步system数据库application项目表同步时间
 #system.application.time=2017-05-01
 #打印sql日志
-#debug=true
-#logging.level.com.huisou.mapper=DEBUG
-#logging.level.root=INFO
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.hibernate=ERROR
+debug=true
+logging.level.com.kenneth.mapper=DEBUG
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
