--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+//server
+server.port=80
 # 数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -72,3 +74,23 @@ logging.level.com.kenneth.mapper=DEBUG
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+# quartz任务配置
+#spring.quartz.job-store-type=jdbc
+#spring.quartz.properties.org.quartz.scheduler.instanceName=clusteredScheduler
+#spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+#spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+#spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+#spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
+#spring.quartz.properties.org.quartz.jobStore.isClustered=true
+#spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=10000
+#spring.quartz.properties.org.quartz.jobStore.useProperties=false
+#spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+#spring.quartz.properties.org.quartz.threadPool.threadCount=10
+#spring.quartz.properties.org.quartz.threadPool.threadPriority=5
+#spring.quartz.properties.org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
+#
+# 打开集群配置
+#spring.quartz.properties.org.quartz.jobStore.isClustered:true
+# 设置集群检查间隔20s
+#spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval = 2000 
